# city-doodle

./: .gitignore  01_lofi_city_builder_overview_tests (1).md  02_ai_coding_assistant_prompt_milestones.md  03_v2_improvements_milestones.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TICKETS.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vibe-code-boilerplate-prompt.md
.claude/commands/: do.md  doctor.md  figma.md  pr.md  ticket.md
.cursor/: rules
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: deploy-fly.yml  lint.yml  migrations.yml  pr-opened.yml  pr-policy.yml  security.yml  tests.yml  version-bump.yml
.vibe/: config.json
agent_instructions/: COMMANDS.md  CORE.md
apps/api/: .env.example  Dockerfile  Procfile  fly.toml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_user_id_to_worlds.py  003_add_user_id_to_jobs.py  004_rename_session_id_to_user_id_in_tile_locks.py  005_add_token_to_sessions.py  006_add_placed_seeds_table.py  007_add_road_network_tables.py  008_add_districts_table.py  009_add_neighborhoods_table.py  009_add_transit_tables.py  010_add_neighborhoods_table.py  010_update_district_types.py  010b_update_district_types.py  011_add_metadata_to_placed_seeds.py  012_add_neighborhoods_table.py  013_add_pois_table.py  014_add_street_grid_to_districts.py  015_add_segment_uniqueness_constraints.py  015_add_trail_to_road_class_enum.py  015_make_station_district_id_nullable.py  016_make_station_district_id_nullable.py  017_add_segment_uniqueness_constraints.py  018_add_worlds_user_id_index.py  019_add_city_limits_table.py  019_add_updated_at_to_worlds.py  020_add_city_limits_table.py  021_add_footprint_to_pois.py  021_add_unique_line_name_per_world.py  021b_add_unique_line_name_per_world.py  022_add_city_model_with_classification.py  023_add_terrain_status_to_tiles.py  024_add_retry_fields_to_jobs.py  025_add_waterfront_type_to_road_edges.py  026_add_progress_to_jobs.py
apps/api/scripts/: create_all_tables.py  create_districts_table.py
apps/api/src/city_api/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/src/city_api/models/: __init__.py  city.py  city_limits.py  district.py  job.py  neighborhood.py  poi.py  road_network.py  seed.py  tile.py  transit.py  user.py  world.py
apps/api/src/city_api/repositories/: __init__.py  city.py  city_limits.py  district.py  job.py  lock.py  neighborhood.py  poi.py  road_network.py  seed.py  tile.py  transit.py  world.py
apps/api/src/city_api/routers/: __init__.py  auth.py
apps/api/src/city_api/routes/: __init__.py  cities.py  city_limits.py  districts.py  jobs.py  locks.py  neighborhoods.py  pois.py  road_network.py  seeds.py  tiles.py  transit.py  worlds.py
apps/api/src/city_api/schemas/: __init__.py  city.py  city_limits.py  district.py  job.py  neighborhood.py  poi.py  road_network.py  seed.py  stadium.py  tile.py  transit.py  user.py  world.py
apps/api/tests/: conftest.py  test_auth.py  test_database.py  test_districts.py  test_health.py  test_jobs.py  test_locks.py  test_road_network.py  test_seeds.py  test_tiles.py  test_transit.py  test_worlds.py
apps/web/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/worker/: .env.example  Dockerfile  Procfile  fly.toml  pyproject.toml  requirements.txt
apps/worker/src/city_worker/: __init__.py  config.py  database.py  growth.py  main.py  models.py  runner.py
apps/worker/src/city_worker/growth/: __init__.py  simulator.py  types.py
apps/worker/src/city_worker/stadium/: __init__.py  grid_impact.py  parking.py  types.py
apps/worker/src/city_worker/terrain/: __init__.py  barrier_islands.py  bays.py  clip.py  deltas.py  generator.py  geographic_masks.py  geographic_presets.py  noise.py  types.py  water.py
apps/worker/tests/: __init__.py  conftest.py  test_growth.py  test_stadium.py  test_terrain.py  test_terrain_pipeline.py  test_worker.py
apps/worker/tests/fixtures/: sample_terrain_geojson.json
docs/: DEPLOY.md  ticket-audit.md
docs/architecture/: README.md  api-conventions.md  districts.md  parks-and-airports.md  roads.md  terrain.md  transit.md
e2e/: README.md  auth.spec.ts  build-grow.spec.ts  export.spec.ts  global.setup.ts  home.spec.ts  worlds.spec.ts
e2e/fixtures/: api.ts  auth.ts  index.ts
lib/vibe/: config.py  deployment_followup.py  github_actions.py
recipes/agents/: boilerplate-feedback.md  human-required-work.md
recipes/tickets/: creating-tickets.md  linear-setup.md  shortcut.md  ticket-audit-and-grandfathering.md
recipes/workflows/: pr-merge-linear.md  pr-opened-linear.md  pr-risk-assessment.md
scripts/: cleanup_combined_labels.py  create_linear_tickets.py
tests/: __init__.py  test_cli_ticket.py  test_config.py  test_deployment_followup.py  test_retrofit.py  test_setup.py  test_trackers_linear.py  test_trackers_shortcut.py  test_wizards_github.py
(+228 files in other folders)
