[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city-doodle"
version = "0.1.0"
description = "A lo-fi vector city builder - lightweight planning sim disguised as a map doodle"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
# Install all app packages in development
all = [
    "city-api",
    "city-worker",
    "city-shared",
]

[project.scripts]
vibe = "lib.vibe.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

# Editable installs for workspace packages
[tool.pip-tools]
# Use: pip install -e apps/api -e apps/worker -e packages/shared

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "apps/api", "apps/worker"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
